<resources>
    <string name="app_name">Eletric_Car</string>
    <string name="eletric_car">Eletric Car</string>
    <string name="carros">Carros</string>
    <string name="favoritos">Favoritos</string>
    <string name="preco">Preço</string>
    <string name="r_300_000_00">300.000,00</string>
    <string name="bateria">Bateria</string>
    <string name="r_300_kwh">300 kWh</string>
    <string name="potencia">Potencia</string>
    <string name="_300_cv">300 cv</string>
    <string name="recarga">Recarga</string>
    <string name="_30_min">30 min\n</string>
    <string name="car">TODO</string>
    <string name="pre_o_kwh">Preço kWh</string>
    <string name="percorrido">Km_Percorrido</string>
    <string name="calcular">CALCULAR</string>
    <string name="resultado_r">Resultado: R</string>
    <string name="calcular_autonomia">Calcular Autonomia</string>
    <string name="Cal_button">CALCULAR</string>
    <string name="no_wifi">Ops! Sem conexão...</string>
    <string name="response_error">Algo deu errado, por favor tente novamente mais tarde</string>
    <string name="saved_calc">saved_calc</string>
</resources>